# polymarket-bot

./: .gitignore  Cargo.toml  Config.toml.example  README.md
src/: config.rs  gamma_api.rs  main.rs  state.rs  trading.rs  ui.rs  websocket.rs
