[package]
name = "polymarket"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
url = "2.5"
ethers = "2.0"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
rand = "0.8"
polymarket-client-sdk = "0.3.3"
alloy = { version = "1.3", features = ["signer-local"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
